Fix expandAttribute losing }

--- a/warehouse-planner.cabal
+++ b/warehouse-planner.cabal
@@ -16,6 +16,7 @@ library
       WarehousePlanner.Display
       WarehousePlanner.Expr
       WarehousePlanner.Optimum
+      WarehousePlanner.Org
       WarehousePlanner.Org.Exec
       WarehousePlanner.Org.Internal
       WarehousePlanner.Org.Types
