fixup! Add Repl

--- a/warehouse-planner.cabal
+++ b/warehouse-planner.cabal
@@ -21,6 +21,7 @@ library
       WarehousePlanner.Org.Internal
       WarehousePlanner.Org.Types
       WarehousePlanner.Rearrange
+      WarehousePlanner.Repl
       WarehousePlanner.Report
       WarehousePlanner.ShelfOp
       WarehousePlanner.SimilarBy
