Test add stocktake comparaison

--- a/warehouse-planner.cabal
+++ b/warehouse-planner.cabal
@@ -94,6 +94,7 @@ test-suite test
   type: exitcode-stdio-1.0
   main-is: Spec.hs
   other-modules:
+      Planner.FullSpec
       Planner.InternalSpec
       Planner.OptimumSpec
       Planner.RearrangeSpec
