--- a/package.yaml
+++ b/package.yaml
@@ -54,6 +54,7 @@ library:
     source-dirs:
       # - src
       - brick
+      - vty
     
     
 tests:
@@ -84,6 +85,7 @@ when:
 - condition: flag(brick)
   dependencies:
   - brick
+  - vty
     
 flags:
  brick:
