fixup! amend! amend! Feat: Display group of shelves in 1 char

--- a/warehouse-planner.cabal
+++ b/warehouse-planner.cabal
@@ -89,6 +89,7 @@ library
     other-modules:
         WarehousePlanner.Brick
         WarehousePlanner.Brick.Repl
+        WarehousePlanner.Brick.Util
     hs-source-dirs:
         brick
         vty
