Refactor:  using summary in Report

--- a/warehouse-planner.cabal
+++ b/warehouse-planner.cabal
@@ -90,7 +90,9 @@ library
   if flag(brick)
     other-modules:
         WarehousePlanner.Brick
+        WarehousePlanner.Brick.RenderBar
         WarehousePlanner.Brick.Repl
+        WarehousePlanner.Brick.Types
         WarehousePlanner.Brick.Util
         WarehousePlanner.Types
     hs-source-dirs:
