--- a/package.yaml
+++ b/package.yaml
@@ -1,5 +1,5 @@
 name: warehouse-planner
-version: '1.1.0'
+version: '1.1.1'
 license: UnspecifiedLicense
 dependencies:
 - containers
@@ -55,6 +55,12 @@ library:
       # - src
       - brick
       - vty
+  ghc-options:
+  - -W
+  - -Werror
+  - -fwarn-tabs
+  - -Wno-type-defaults
+  - -Wno-partial-type-signatures
     
     
 tests:
