--- a/warehouse-planner.cabal
+++ b/warehouse-planner.cabal
@@ -53,7 +53,7 @@ library
       ViewPatterns
       MultiWayIf
       LambdaCase
-  ghc-options: -W -Werror -fwarn-tabs -Wno-type-defaults -Wno-partial-type-signatures
+  ghc-options: -W -Wmissing-fields -fwarn-tabs -Wno-type-defaults -Wno-partial-type-signatures -Wincomplete-patterns -Werror -Werror=missing-fields
   build-depends:
       Glob
     , base
