--- a/warehouse-planner.cabal
+++ b/warehouse-planner.cabal
@@ -16,6 +16,7 @@ flag brick
 
 library
   exposed-modules:
+      WarehousePlanner.Affine
       WarehousePlanner.Base
       WarehousePlanner.Csv
       WarehousePlanner.Display
@@ -104,6 +105,7 @@ test-suite test
   type: exitcode-stdio-1.0
   main-is: Spec.hs
   other-modules:
+      Planner.AffineSpec
       Planner.FullSpec
       Planner.InternalSpec
       Planner.OptimumSpec
