--- a/warehouse-planner.cabal
+++ b/warehouse-planner.cabal
@@ -75,6 +75,7 @@ library
     , mtl
     , palette ==0.3.*
     , parsec ==3.1.*
+    , process
     , regex-base
     , regex-compat-tdfa
     , regex-tdfa >=1.2.2 && <1.3
@@ -141,6 +142,7 @@ executable whp
     , mtl
     , palette ==0.3.*
     , parsec ==3.1.*
+    , process
     , regex-base
     , regex-compat-tdfa
     , regex-tdfa >=1.2.2 && <1.3
@@ -207,6 +209,7 @@ test-suite test
     , mtl
     , palette ==0.3.*
     , parsec ==3.1.*
+    , process
     , regex-base
     , regex-compat-tdfa
     , regex-tdfa >=1.2.2 && <1.3
@@ -265,6 +268,7 @@ benchmark bench
     , mtl
     , palette ==0.3.*
     , parsec ==3.1.*
+    , process
     , regex-base
     , regex-compat-tdfa
     , regex-tdfa >=1.2.2 && <1.3
