--- a/warehouse-planner.cabal
+++ b/warehouse-planner.cabal
@@ -22,6 +22,7 @@ library
       WarehousePlanner.Display
       WarehousePlanner.Exec
       WarehousePlanner.Expr
+      WarehousePlanner.History
       WarehousePlanner.Optimum
       WarehousePlanner.Org
       WarehousePlanner.Org.Exec
