--- a/warehouse-planner.cabal
+++ b/warehouse-planner.cabal
@@ -32,6 +32,7 @@ library
       WarehousePlanner.Rearrange
       WarehousePlanner.Repl
       WarehousePlanner.Report
+      WarehousePlanner.Selector
       WarehousePlanner.ShelfOp
       WarehousePlanner.SimilarBy
       WarehousePlanner.Slices
