--- a/package.yaml
+++ b/package.yaml
@@ -18,7 +18,8 @@ dependencies:
 - diagrams-lib >= 1.4.1.2 && < 1.5
 - diagrams-cairo >= 1.4 && < 1.5
 - diagrams-svg >= 1.4 && < 1.5
-- parsec >= 3.1 && < 3.2
+- megaparsec >= 9.2.2 && < 9.3
+- parser-combinators >= 1.3 && < 1.4
 - Glob
 - mtl
 - colour >= 2.3.3 && < 2.4
