--- a/warehouse-planner.cabal
+++ b/warehouse-planner.cabal
@@ -39,6 +39,7 @@ library
       WarehousePlanner.Styling
       WarehousePlanner.Summary
       WarehousePlanner.Type
+      WarehousePlanner.WPL.ExContext
       WarehousePlanner.WPL.Exec
       WarehousePlanner.WPL.Parser
       WarehousePlanner.WPL.Types
@@ -80,6 +81,7 @@ library
     , megaparsec >=9.2.2 && <9.3
     , mono-traversable
     , mtl
+    , ordered-containers >=0.2.3 && <0.3
     , palette ==0.3.*
     , parser-combinators ==1.3.*
     , process
@@ -151,6 +153,7 @@ executable whp
     , megaparsec >=9.2.2 && <9.3
     , mono-traversable
     , mtl
+    , ordered-containers >=0.2.3 && <0.3
     , palette ==0.3.*
     , parser-combinators ==1.3.*
     , process
@@ -221,6 +224,7 @@ test-suite test
     , megaparsec >=9.2.2 && <9.3
     , mono-traversable
     , mtl
+    , ordered-containers >=0.2.3 && <0.3
     , palette ==0.3.*
     , parser-combinators ==1.3.*
     , process
@@ -282,6 +286,7 @@ benchmark bench
     , megaparsec >=9.2.2 && <9.3
     , mono-traversable
     , mtl
+    , ordered-containers >=0.2.3 && <0.3
     , palette ==0.3.*
     , parser-combinators ==1.3.*
     , process
