--- a/package.yaml
+++ b/package.yaml
@@ -1,5 +1,5 @@
 name: warehouse-planner
-version: '1.3.0.1'
+version: '1.3.0.2'
 license: UnspecifiedLicense
 dependencies:
 - containers
@@ -66,6 +66,13 @@ library:
     - WarehousePlanner.Brick.Util
     - WarehousePlanner.Brick.BoxDetail
     - WarehousePlanner.Brick.Input
+  - condition: flag(dev)
+    then:
+      ghc-options:
+      - -O0
+    else:
+      ghc-options:
+      - -O2
   ghc-options:
   - -Werror
   - -W
@@ -103,7 +110,6 @@ executables:
     when:
     - condition: flag(brick)
       buildable: true
-
 benchmarks:
   bench:
     source-dirs:
@@ -129,3 +135,7 @@ flags:
    description: use brick to visualize warehouse
    manual: True
    default: True
+ dev:
+   description: Turn on development
+   manual: False
+   default: False
