--- a/warehouse-planner.cabal
+++ b/warehouse-planner.cabal
@@ -5,7 +5,7 @@ cabal-version: 1.12
 -- see: https://github.com/sol/hpack
 
 name:           warehouse-planner
-version:        1.3.0.1
+version:        1.3.0.2
 license:        UnspecifiedLicense
 build-type:     Simple
 
@@ -29,6 +29,7 @@ library
       WarehousePlanner.Expr
       WarehousePlanner.History
       WarehousePlanner.History.Types
+      WarehousePlanner.Move
       WarehousePlanner.Optimum
       WarehousePlanner.Org
       WarehousePlanner.Org.Exec
@@ -43,6 +44,7 @@ library
       WarehousePlanner.Slices
       WarehousePlanner.Styling
       WarehousePlanner.Summary
+      WarehousePlanner.Tiling
       WarehousePlanner.Type
       WarehousePlanner.WPL.ExContext
       WarehousePlanner.WPL.Exec
