--- a/package.yaml
+++ b/package.yaml
@@ -4,6 +4,7 @@ license: UnspecifiedLicense
 dependencies:
 - containers
 - base
+- template-haskell >= 2.18 && < 2.19
 - text
 - cassava >=0.4.5 && <0.5
 - classy-prelude >=0.10.2
