--- a/package.yaml
+++ b/package.yaml
@@ -33,6 +33,7 @@ dependencies:
 - ghc-prim
 - process
 - temporary >= 1.3 && < 1.4
+- prettyprinter >= 1.7 && < 1.8
   
 language: GHC2021
 default-extensions:
