Feat(Split): rewrite shelf split formula to work with <, = and >

--- a/warehouse-planner.cabal
+++ b/warehouse-planner.cabal
@@ -1,6 +1,6 @@
 cabal-version: 1.12
 
--- This file has been generated from package.yaml by hpack version 0.37.0.
+-- This file has been generated from package.yaml by hpack version 0.38.0.
 --
 -- see: https://github.com/sol/hpack
 
@@ -210,6 +210,7 @@ test-suite test
       Planner.PartitionModeSpec
       Planner.RearrangeSpec
       Planner.SelectorSpec
+      Planner.ShelfOpSpec
       Planner.SpecUtil
       Planner.WarehouseSpec
       Planner.WPL.ExecSpec
