--- a/warehouse-planner.cabal
+++ b/warehouse-planner.cabal
@@ -209,6 +209,7 @@ test-suite test
       Planner.OptimumSpec
       Planner.PartitionModeSpec
       Planner.RearrangeSpec
+      Planner.ReportSpec
       Planner.SelectorSpec
       Planner.ShelfOpSpec
       Planner.SpecUtil
